--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
-@import 'reset';
-@import 'variables';
-@import 'mixins';
-@import 'grid';
-@import 'header';
-@import 'home';
+@import "mixins";
+@import "reset";
+@import "variables";
+@import "grid";
+@import "header";
+@import "home";
