--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -133,23 +133,22 @@
       background-color: rgba(197, 190, 220, 0.1);
       border-radius: 1.2rem;
     }
-    .info{
+    .info {
       max-width: 23.9rem;
-      h4{
+      h4 {
         font-weight: bold;
         font-size: 1.8rem;
         line-height: 2.2rem;
         color: $purple;
         margin-bottom: 2rem;
       }
-      p{
+      p {
         font-size: 1.6rem;
         line-height: 165%;
         color: $gray-02;
-
       }
     }
-    .card-feactured{
+    .card-feactured {
       width: 100%;
       max-width: 28rem;
       height: 32.3rem;
@@ -157,22 +156,80 @@
       border-radius: 1.2rem;
       padding-top: 4.1rem;
       padding-left: 4.2rem;
-      .icon{
+      .icon {
         background-color: $white;
       }
-      .info{
+      .info {
         max-width: 20.4rem;
       }
-
     }
     ul {
       width: 100%;
       max-width: 90.4rem;
-      margin-top:4.1rem;
+      margin-top: 4.1rem;
       padding-bottom: 6.5rem;
       padding-left: 2rem;
       @include flex(row, flex-start, space-between);
-      border-bottom: 3px solid rgba(95,60,161,0.1) ;
+      border-bottom: 0.3rem solid rgba(95, 60, 161, 0.1);
+    }
+  }
+  @include responsive(991px) {
+    .content {
+      flex-direction: column;
+      align-items: flex-start;
+      .card-feactured {
+        max-width: 100%;
+        height: auto;
+        padding: 3rem;
+        @include flex(column, center, center);
+        .info {
+          max-width: 100%;
+          h4 {
+            text-align: center;
+          }
+          p {
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+  @include responsive(768px) {
+    padding-top: 10rem;
+    padding-bottom: 5rem;
+    .top {
+      flex-direction: column;
+      h2 {
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+    }
+    .content {
+      ul {
+        gap: 2.5rem;
+      }
+    }
+  }
+  @include responsive(480px) {
+    padding-top: 6rem;
+    .content {
+      ul {
+        flex-direction: column;
+        padding-left: 0rem;
+        margin-top: 3rem;
+        li {
+          @include flex(column, center, center);
+        }
+      }
+      .info {
+        max-width: 95%;
+        h4{
+          text-align: center;
+        }
+        p{
+          text-align: center;
+        }
+      }
     }
   }
 }
